--- a/react_src/src/App.css
+++ b/react_src/src/App.css
@@ -1,38 +1,18 @@
+
+:root {
+  --main-bg-color: #e0e0e0;
+  --dark-shadow-color: #bebebe;
+  --light-shadow-color: #ffffff;
+  --dark-gradient-bg-color: #f0f0f0;
+  --light-gradient-bg-color: #cacaca;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: var(--main-bg-color);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:focus, textarea:focus, input:focus{
+  outline: none;
 }
