--- a/react_src/src/components/TodoList.css
+++ b/react_src/src/components/TodoList.css
@@ -1,4 +1,19 @@
 .todo-list{
-    max-width: 500px;
+    width: 100%;
+
+}
+
+.todo-list__add-bar {
+    display: flex;
+    align-items: center;
+}
+
+.todo-list__add-input {
+    margin-right: 16px;
+    width: 100%;
+}
+
+.todo-list ul{
+    padding: 0;
 
 }
